--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,7 @@
   --i-cloudy-font-size-medium: 18px;
   --i-cloudy-font-size-small: 16px;
   --i-cloudy-font-size-x-small: 14px;
+  --i-cloudy-font-size-x-x-small: 12px;
 }
 @font-face {
   font-family: "Segoe UI";
